<resources>
    <string name="AppName">Pil Mobile Basics</string>
    <string name="TitleCounter">Contador</string>
    <string name="ResetButton">Resetear</string>
    <string name="IncreaseButton">Incrementar</string>
    <string name="DecreaseButton">Decrementar</string>
    <string name="Number">Escribir numero</string>
    <string name="Empty">Rellenar con un valor</string>
    <string name="Reset">El contador ya esta en 0</string>
</resources>